force-app/main/default/objects/Carrier_Quote__c/Carrier_Quote__c.object-meta.xml
<CustomObject>
    <description>Used by P&amp;C to store quotes provided by carriers</description>
    <label>Carrier Quote</label>
    <nameField>
        <displayFormat>Carrier Quote - {000000000}</displayFormat>
        <label>Carrier Quote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>