force-app/main/default/objects/Carrier_Quote__c/fields/Acord_Name__c.field-meta.xml
<CustomField>
    <fullName>Acord_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acord Name</label>
    <referenceTo>Acord__c</referenceTo>
    <relationshipLabel>Carrier Quotes</relationshipLabel>
    <relationshipName>Carrier_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>