force-app/main/default/objects/Carrier_Quote__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name**</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5-STAR</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>AMTRUST NORTH AMERICA INC</fullName>
            </value>
            <value>
                <fullName>CHESAPEAKE EMP INS</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>KENTUCKY EMPLOYERS MUTUAL</fullName>
            </value>
            <value>
                <fullName>LIBERTY MUTUAL</fullName>
            </value>
            <value>
                <fullName>MARKEL CORPORATION</fullName>
            </value>
            <value>
                <fullName>MICHIGAN STATE FUND</fullName>
            </value>
            <value>
                <fullName>MINNESOTA WC ASSGND RISK</fullName>
            </value>
            <value>
                <fullName>NCCI</fullName>
            </value>
            <value>
                <fullName>NEW JERSEY WC INS. PLAN</fullName>
            </value>
            <value>
                <fullName>PA WORKERS COMP</fullName>
            </value>
            <value>
                <fullName>PIE INSURANCE</fullName>
            </value>
            <value>
                <fullName>PMC Insurance Group</fullName>
            </value>
            <value>
                <fullName>RHODE ISLAND WC</fullName>
            </value>
            <value>
                <fullName>STATE ACCIDENT INS FUND</fullName>
            </value>
            <value>
                <fullName>TEXAS WORKERS COMP</fullName>
            </value>
            <value>
                <fullName>TRAVELERS (P&amp;C)</fullName>
            </value>
            <value>
                <fullName>WISCONSIN COMP RATING BUR</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>OTHER *If Selected, Add Other Carrier Name on PDF form</label>
            </value>
            <value>
                <fullName>AmWins Group, Inc.</fullName>
            </value>
            <value>
                <fullName>California State Fund (SCIF)</fullName>
            </value>
            <value>
                <fullName>CHUBB</fullName>
            </value>
            <value>
                <fullName>Colorado State Fund</fullName>
            </value>
            <value>
                <fullName>EMPLOYERS</fullName>
            </value>
            <value>
                <fullName>GUARD(Berkshire Hathaway)</fullName>
            </value>
            <value>
                <fullName>HARTFORD</fullName>
            </value>
            <value>
                <fullName>Hiscox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>