force-app/main/default/objects/Carrier_Quote__c/fields/Deposit_Premium__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Premium__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deposit Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>