force-app/main/default/objects/Carrier_Quote__c/fields/Proposed_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Expiration Date</label>
    <type>Date</type>
</CustomField>